--- a/Index.html
+++ b/Index.html
@@ -105,6 +105,90 @@
 			</div>
 		</div>
 	</section>
+
+
+	<section class="number-section">
+  		<div class="container">
+  			<div class="header-title">
+  				<h2>Optimize growth with real, trackable numbers</h2>
+  			</div>	
+  		</div>
+  		<div class="number-features">
+  			<div class="number-features-row">
+  				<div class="box box1">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="white-text" >5m</h4>
+	  						<p class="white-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="white-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  				<div class="box">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="red-text">3m</h4>
+	  						<p class="red-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="red-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="number-features-row">
+  				<div class="box box3">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="white-text">2.2m</h4>
+	  						<p class="white-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="white-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  				<div class="box box4">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="white-text">2.2m</h4>
+	  						<p class="white-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="white-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="number-features-row">
+  				<div class="box">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="red-text">2.2m</h4>
+	  						<p class="red-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="red-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  				<div class="box box3">
+  					<div class="ring">
+  						<div class="narrow">
+  							<h4 class="white-text">2.2m</h4>
+	  						<p class="white-text">Massa nec, porta libero.Maecenas nec faucibus</p>
+	  						<a class="white-text" href="#">WANT TO LEARN MORE?</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</section>
+  	
+  	<section class="tacco-section">
+  		<div class="tacco-images">
+  			<img src="Images/tacco.png" alt="">
+  		</div>
+  		<div class="tacco-features">
+  			<div class="tacco-title white-text">
+  				<h2>exploring our prototypes & non-traditional opportunities.</h2>
+  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. </p>
+  				<a href="">lead a self-discovery 1-800-123-4567</a>
+  			</div>
+  		</div>
+  	</section>
 	
 </body>
 </html>
