--- a/Index.html
+++ b/Index.html
@@ -183,10 +183,63 @@
   		</div>
   		<div class="tacco-features">
   			<div class="tacco-title white-text">
-  				<h2>exploring our prototypes & non-traditional opportunities.</h2>
+  				<div style="background-color: #fff; height: 55px; color: #E21936; width: 500px;padding-top: 30px;"> 
+	  				<h2>exploring our</h2>
+	  			</div>
+	  			<h2>
+	  				prototypes & non-traditional opportunities.
+	  			</h2>
   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. </p>
-  				<a href="">lead a self-discovery 1-800-123-4567</a>
+  				<a class="white-text"href="">lead a self-discovery 1-800-123-4567</a>
   			</div>
+  		</div>
+  	</section>
+
+  	<section class="tacco-bruger">
+  		<div class="container">
+  			<h2>Did you think we’re justburgers? We’re so much more.</h2>
+  			<div class="discription">
+  				<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Inventore omnis dolore nam nostrum id itaque aliquam, libero provident tempora. Cum excepturi nam corrupti pariatur blanditiis atque, fuga fugit esse nesciunt.
+  				Error molestiae eaque repellendus, a asperiores, placeat quia voluptate explicabo voluptatibus ut quas, vel. Culpa, deleniti odio sequi est? Excepturi sapiente explicabo numquam expedita aut fugit illo incidunt! Dolorem, esse!
+  				Consequatur incidunt dolores consectetur officiis ex fugiat impedit omnis at eveniet nulla similique beatae aliquam, distinctio vel laboriosam sapiente veniam? Ratione aspernatur ea debitis nemo, dolores mollitia nostrum voluptate alias.</p>
+  				<a href="">let’s talk more 1-800-123-4567</a>
+  			</div>
+  			<div class="button-next">
+  				<div class="button-col"><a href="">←</a></div>
+ 				<img src="Images/juice.png" alt="">
+  				<div class="button-col"><a href="">→</a></div>
+  			</div>
+  		</div>
+  	</section>
+
+  	<section class="strategic-section">
+  		<div class="container">
+  			<div class="even">
+  				<div class="header-text">
+  					<h2>Set the strategic Foundation for a Long-term, Integrated plan.</h2>
+  					<div class="two-row">
+  						<div class="two-column">
+  							<div class="strategic-images">
+  								<img src="Images/Building1.png" alt="">
+	  							<img src="Images/Building1.png" alt="">
+	  							<img src="Images/Building1.png" alt="">
+	  							<img src="Images/Building1.png" alt="">
+  							</div>
+  						</div>
+  						<div class="two-column">
+  							<div class="arrow"><a href="">→</a></div>
+  							<div class="text">
+  								<p>
+  								01. Brand Story Developemnt
+								fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi.
+								</p>
+								<a href="">02. Consumer Journy Development </a>
+  							</div>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="even"></div>
   		</div>
   	</section>
 	
