--- a/Index.html
+++ b/Index.html
@@ -215,8 +215,8 @@
   	<section class="strategic-section">
   		<div class="container">
   			<div class="even">
-  				<div class="header-text">
-  					<h2>Set the strategic Foundation for a Long-term, Integrated plan.</h2>
+  				<div class="header-text1">
+  					<h2>Set the strategic Foundation for a Long-term, Integrated plan.</h2>	</div>
   					<div class="two-row">
   						<div class="two-column">
   							<div class="strategic-images">
@@ -229,19 +229,126 @@
   						<div class="two-column">
   							<div class="arrow"><a href="">→</a></div>
   							<div class="text">
+  								<span>01. Brand Story Developemnt</span>
   								<p>
-  								01. Brand Story Developemnt
 								fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi.
 								</p>
-								<a href="">02. Consumer Journy Development </a>
+								<a class="white-text"href="">02. Consumer Journy Development </a>
   							</div>
   						</div>
   					</div>
-  				</div>
   			</div>
-  			<div class="even"></div>
   		</div>
   	</section>
-	
+	<section class="car"><img src="Images/carbg.png" alt=""></section>
+
+	<section class="map-gradient">
+		<div class="map-container">
+			<div class="map-row">
+				<h2>Available Markets</h2>
+				<div class="map-box-flex">
+						<div class="map-box">
+						<div class="map-inner-box">
+							<h4>U.S. Franchise Markets</h4>
+							<button>availability</button>
+						</div>
+					</div>
+					<div class="map-box">
+						<div class="map-inner-box">
+							<h4>U.S. Franchise Markets</h4>
+							<button>availability</button>
+						</div>
+					</div>
+				</div>
+				<img src="Images/Map.png" alt="" class="map-image">
+				<div class="map-button">
+					<a href="" class="prev">←</a>
+					<img src="Images/jackbutton.png" alt="" class="image-button">
+					<a href="" class="next">→</a>
+				</div>
+			</div>
+			<div class="map-row">
+				<div class="map-discreption">
+					<p class="white-text">Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet,.i.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae.</p>
+					<a href="" class="white-text" >let’s talk more 1-800-123-4567</a>
+				</div>
+				<div class="map-menu ">
+					<h4>Texas</h4>
+					<div class="map-box-flex">
+						<div class="map-submenu">
+							<ul>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+							</ul>
+							<a href="" class="white-text" >Veiw more</a>
+						</div>
+						<div class="map-submenu">
+							<ul>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+							</ul>
+							<a href="" class="white-text">Veiw more</a>
+						</div>
+						<div class="map-submenu">
+							<ul>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+								<li>Name of city location</li>
+							</ul>
+								<a href="" class="white-text">Veiw more </a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="business">
+		<div class="business-growth">
+			<h2>Disruption is Creating Massive Opportunities to Ignite Business Growth.</h2>
+			<img src="Images/business-burger.png" alt="">
+		</div>
+		<div class="business-row">
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+		</div>
+		<div class="business-row">
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+			<div class="business-col">
+				<h4>Drive Sustainable Business Growth</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi.</p>
+				<a href="">let’s talk more 1-800-123-4567</a>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<img src="Images/section-background.png" alt="asd">
+	</section>
+
 </body>
 </html>
