--- a/Index.html
+++ b/Index.html
@@ -227,7 +227,6 @@
   							</div>
   						</div>
   						<div class="two-column">
-  							<div class="arrow"><a href="">→</a></div>
   							<div class="text">
   								<span>01. Brand Story Developemnt</span>
   								<p>
@@ -350,5 +349,24 @@
 		<img src="Images/section-background.png" alt="asd">
 	</section>
 
+	<footer>
+		<div class="footer-row">
+			<div class="footer-col-1">
+				<img src="Images/Logo.png" alt="Logo">
+			</div>
+			<div class="footer-col-2">
+				<h2 class="white-text">Let’s talk and unleash the freedom to indulge in the life you crave. </h2>
+			</div>
+			<div class="footer-col-3">
+				<form action="Submit">
+					<input type="text" placeholder="Name">
+					<input type="Phone" placeholder="Phone">	
+					<input type="email" placeholder="Email">
+					<input type="time" placeholder="time">
+					<input type="Submit" value="let’s talk today!">
+				</form>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
