--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="media.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/afc58b7107.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
@@ -183,7 +184,7 @@
   		</div>
   		<div class="tacco-features">
   			<div class="tacco-title white-text">
-  				<div style="background-color: #fff; height: 55px; color: #E21936; width: 500px;padding-top: 30px;"> 
+  				<div > 
 	  				<h2>exploring our</h2>
 	  			</div>
 	  			<h2>
@@ -349,12 +350,137 @@
 		<img src="Images/section-background.png" alt="asd">
 	</section>
 
+	<section class="final-section">
+		<div class="final-row">
+			<div class="col1">
+				<h2>Our innovation defy ordinary limitation</h2>
+			</div>
+			<div class="col2">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut reiciendis nisi ducimus repudiandae officia aperiam dicta repellat vel quis quasi, aspernatur sed quae et libero quisquam, soluta, expedita voluptatum possimus.</p>
+				<div class="link-section">
+					<a href="">Name of Innovation</a>
+					<a href="">Name of Innovation</a>
+					<a href="">Name of Innovation</a>
+				</div>		
+				<div class="link-section">
+					<a href="">Name of Innovation</a>
+					<a href="">Name of Innovation</a>
+					<a href="">Name of Innovation</a>
+				</div>		
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
+	<section class="popcorn-section">
+			<div class="popcorn-row">	
+					<div class="pop-corn1">	</div>
+					<div class="pop-corn2">
+						<div class="popcorn-images">	
+							<img src=Images/pocorn.png alt="">
+						</div>	
+						<div class="popcorn-title white-text">	
+							<h2>Got Questions? We have answers.</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Tempore, itaque, excepturi ad magnam dignissimos quam velit id quibusdam ex possimus explicabo, minima, eum! Cumque quia cum veritatis repellat consequuntur corporis?	</p>
+						</div>	
+						<div class="popcorn-bar">	
+							<i class="fa-solid fa-magnifying-glass"></i>
+							<input type="text" placeholder="Ask your Question...">	
+							<button>→</button>	
+						</div>	
+					</div>
+					<div class="pop-corn3">	</div>
+			</div>		
+	</section>	
+
+
+
+
+
+	
+	<section class="accordion-section">
+		<div class="accordion-container">
+			<div class="card-flex">
+				<div class="accordion-card">
+					<i class="fa-solid fa-truck-moving"></i>
+					<p>Category name</p>
+				</div>
+				<div class="accordion-card">
+					<i class="fa-solid fa-truck-moving"></i>
+					<p>Category name</p>
+				</div>
+				<div class="accordion-card">
+					<i class="fa-solid fa-truck-moving"></i>
+					<p>Category name</p>
+				</div>
+				<div class="accordion-card">
+					<i class="fa-solid fa-truck-moving"></i>
+					<p>Category name</p>
+				</div>
+			</div>
+
+			<div class="accordion-search-width">
+				<div class="accordion-search-bar">
+					<input type="text" placeholder="Name of Category goes here...">
+				</div>
+				<div class="accordion-button">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<button>more</button>
+				</div>
+
+				<div class="accordion">
+					<div class="accordion-body">
+						<div class="accordion-title">
+							<h5>Name of Question goes here</h5>
+							<i class="fa-solid fa-minus"></i>
+						</div>
+						<p>Lorem ipsum dolor sit, amet, consectetur adipisicing elit. Cupiditate dolore, iure! Quibusdam quidem natus ipsa officia provident pariatur sit voluptas eaque totam? Iste architecto pariatur numquam sapiente eaque laudantium. Tempora.</p>
+					</div>
+					<div class="accordion-body">
+						<div class="accordion-title">
+							<h5>Name of Question goes here</h5>
+							<i class="fa-solid fa-plus"></i>
+						</div>
+					</div>
+					<div class="accordion-body">
+						<div class="accordion-title">
+							<h5>Name of Question goes here</h5>
+							<i class="fa-solid fa-plus"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</section>
+
+
+	
+
+
+
+
+
+
+	<section>
+		<div class="above-footer">
+			<div>
+				<img src="Images/Fotoer-bg.png" alt="">
+			</div>
+			<div class="seeking-out white-text">
+				<h2>seeking out people who live by the law of “Hell Yeah!”</h2>
+			</div>
+		</div>
+	</section>
+
 	<footer>
 		<div class="footer-row">
-			<div class="footer-col-1">
-				<img src="Images/Logo.png" alt="Logo">
-			</div>
 			<div class="footer-col-2">
+				<img src="Images/Logo.png" alt="Logo">
 				<h2 class="white-text">Let’s talk and unleash the freedom to indulge in the life you crave. </h2>
 			</div>
 			<div class="footer-col-3">
@@ -365,8 +491,20 @@
 					<input type="time" placeholder="time">
 					<input type="Submit" value="let’s talk today!">
 				</form>
+
+				<div class="form-decription white-text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus urna ligula, fringilla quis congue vitae, lacinia eu ex. Maecenas nec rutrum nisi. Duis at tellus vitae nisl varius blandit. Fusce non mi egestas, tincidunt massa nec, porta libero. Maecenas nec faucibus mi, at tristique erat. Pellentesque in tortor eget est cursus malesuada, </p>
+					<a href="" class="white-text">let’s have a discovery day 1-800-123-4567</a>
+				</div>
 			</div>
 		</div>
+
+		<section class="copyright" >
+			<div class="container">
+				<div class="range"></div>
+				<p class="white-text">© Different Rules, LLC. 2021    |        Privacy & Terms     |    All Rights Reserved </p>
+			</div>
+		</section>
 	</footer>
 </body>
 </html>
